--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ form {
   font-size: 18px;
   text-wrap: wrap;
 }
-button {
+button,
+.links {
   background-color: rgb(22, 162, 222);
   color: #fff;
   border: none;
@@ -74,4 +75,15 @@ button {
 .input-wrapper label {
   gap: 10px;
   max-width: 50%;
+}
+a {
+  text-decoration: none;
+  font-size: larger;
+}
+.flex-wrapper {
+  display: flex;
+  width: fit-content;
+  gap: 10px;
+  align-items: center;
+  justify-content: space-between;
 }
