--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ form {
   font-size: 18px;
   text-wrap: wrap;
 }
+.current_date_form input, .given_date_form input {
+  width: 50%;
+}
 button,
 .links {
   background-color: rgb(22, 162, 222);
@@ -71,18 +74,7 @@ button,
 input:focus {
   background-color: rgb(200, 252, 234);
 }
-.input-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 5px;
-  flex-wrap: wrap;
-}
 
-.input-wrapper label {
-  gap: 10px;
-  max-width: 50%;
-}
 a {
   text-decoration: none;
   font-size: larger;
@@ -98,11 +90,13 @@ a {
   display: flex;
   align-items: start;
   justify-items: flex-start;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .flex-container div {
   flex: 1;
   padding: 0px 5px;
+  min-height: fit-content;
 }
 
 .flex-container > div:nth-child(1) {
